# minisymposium-workshop-2024

./: README.md  pyproject.toml  requirements.txt  workshop.ipynb
.binder/: postBuild
.devcontainer/: devcontainer.json
